Update and fix class names in help.html file
Class names in help.html have been adjusted to better reflect their function - "specify-subject", "specify-message", "specify-attachments" among others. Additionally, styling issues related to the "textarea-message" class in the CSS file were addressed.

--- a/public/app/help.html
+++ b/public/app/help.html
@@ -390,7 +390,7 @@
                 </div>
               </div>
             </div>
-            <div sect_block="specify-subject" class="sect_block form_block short">
+            <div sect_block="full-message" class="sect_block form_block short">
               <div class="sect_block_tit-wrap">
                 <div class="sect_block_tit-text">Subject</div>
               </div>
@@ -406,7 +406,7 @@
                 </div>
               </div>
             </div>
-            <div sect_block="specify-message" class="sect_block form_block">
+            <div sect_block="specify-message" class="sect_block form_block short">
               <div class="sect_block_tit-wrap">
                 <div class="sect_block_tit-text">Message</div>
               </div>
@@ -417,27 +417,27 @@
               <div class="input_grid-wrap textarea">
                 <div class="w-layout-grid input-grid">
                   <div class="input-wrap w-clearfix">
-                    <div class="textarea_embed-wrap w-embed"><textarea autocomplete="off" help_input="message" type="search" class="ill_input textarea--message" rows="10" cols="50"></textarea></div>
+                    <div class="textarea_embed-wrap w-embed"><textarea autocomplete="off" help_input="message" type="search" class="ill_input textarea-message" rows="10" cols="50"></textarea></div>
                   </div>
                 </div>
               </div>
               <div class="textarea-subtext">5000 character limit</div>
             </div>
-            <div sect_block="notify_team" class="sect_block form_block">
+            <div sect_block="specify-attachments" class="sect_block form_block">
               <div class="sect_block_tit-wrap">
                 <div class="sect_block_tit-text">Attachments</div>
               </div>
               <div class="sect_block_text-wrap">
-                <div class="sect_block-text">Upload up to 5 screenshots that might be relevant to theissue that you&#x27;re facing</div>
+                <div class="sect_block-text">Upload up to 5 screenshots that might be relevant to the issue that you&#x27;re facing</div>
               </div>
               <div class="sect_block-divider"></div>
-              <div block_content="notify_team" class="action-btn-wrap w-clearfix">
+              <div block_content="attachment" class="action-btn-wrap w-clearfix">
                 <div class="action-btn-grid-wrap three">
-                  <div  class="attachment-btn"></div>
+                  <div class="attachment-btn"></div>
                 </div>
               </div>
             </div>
-            <div sect_block="notify_team" class="sect_block form_block">
+            <div sect_block="notify-team" class="sect_block form_block">
               <div class="sect_block_tit-wrap">
                 <div class="sect_block_tit-text">All done?</div>
               </div>
@@ -445,11 +445,11 @@
                 <div class="sect_block-text">Already posted your license key on our forum thread? Notify our team to expedite the review process.</div>
               </div>
               <div class="sect_block-divider"></div>
-              <div block_content="send-request" class="action-btn-wrap w-clearfix">
+              <div block_content="notify-team" class="action-btn-wrap w-clearfix">
                 <div class="action-btn-grid-wrap">
-                  <div action-btn-issue-send="send-request" class="action-btn external w-clearfix">
+                  <div action-btn-issue-notify="send-request" class="action-btn external w-clearfix">
                     <div class="btn_icon send"></div>
-                    <div action-btn-text="send-request" class="action-btn-text">Send support request</div>
+                    <div action-btn-text-issue-notify="send-request" class="action-btn-text">Send support request</div>
                     <div lottie_ldr_wrap="send-request" class="lottie_btn_ldr-wrap middle w-embed">
                       <lottie-player class="lottie_btn_ldr-icon" lottie_ldr="send-request" src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                       </lottie-player>
