Add element divider to help.html
A new section divider has been inserted to the help.html file to improve layout organization. The added divider helps in separating different sections, enhancing the content structure of the page, for better user experience and readability.

--- a/public/app/help.html
+++ b/public/app/help.html
@@ -465,6 +465,7 @@
                 <div class="sect_block_text-wrap">
                   <div class="sect_block-text">Thank you for notifying us! We&#x27;ll review as soon as possible and enable Member Discount after we&#x27;ve confirmed your post. This can take up to 1-2 days but usually happens within a few hours.</div>
                 </div>
+                <div class="sect_block-divider pad_top"></div>
                 <div class="w-layout-grid cta_crd--grid small">
                   <a href="#" class="sect_crd small2 w-inline-block">
                     <div class="sect_crd_tit_wrp">
