--- a/public/app/help.html
+++ b/public/app/help.html
@@ -371,7 +371,7 @@
                 </div>
               </div>
             </div>
-            <div sect_block="specify-proxies" class="sect_block form_block">
+            <div id="specify-proxies" sect_block="specify-proxies" class="sect_block form_block">
               <div class="sect_block_tit-wrap">
                 <div class="sect_block_tit-text">Which proxies are affected?</div>
               </div>
